<resources>
    <string name="app_name">Catat Uang</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_grafik">Grafik</string>
    <string name="menu_kategori">Kategori</string>
    <string name="menu_eksport">Eksport xls</string>
    <string name="menu_pengaturan">Pengaturan</string>
    <string name="menu_tentang">Tentang</string>
    <string name="add">Tambah data</string>
</resources>